Listing Python pygame Mar 4, 2021
Last login: Wed Mar  3 19:37:08 on ttys000
MacBook-Air-Dmitrij:~ dmitrijslesarev$ python3
Python 3.9.1 (default, Dec 20 2020, 15:43:43) 
[Clang 10.0.0 (clang-1000.10.44.4)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import pygame
pygame 2.0.1 (SDL 2.0.14, Python 3.9.1)
Hello from the pygame community. https://www.pygame.org/contribute.html
>>> import pygame, sys, time
>>> from pygame.locals import *
>>> pygame.init()
(7, 0)
>>> WINDOWWIDTH = 400
>>> WINDOWHEIGHT = 400
>>> windowSurface = pygame.display.set_mode(WINDOWWIDTH, WINDOWHEIGHT, 0, 32)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: argument 1 must be 2-item sequence, not int
>>> windowSurface = pygame.display.set_mode((WINDOWWIDTH, WINDOWHEIGHT), 0, 32)
>>> DOWNLEFT = 'downleft'
>>> DOWNRIGHT = 'downright'
>>> UPLEFT = 'upleft'
>>> UPRIGHT = 'upright'
>>> MOVESPEED = 4
>>> 
>>> # color setting
>>> WHITE = (255, 255, 255)
>>> RED = (255, 0, 0)
>>> GREEN = (0, 255, 0)
>>> BLUE = (0, 0, 255)
>>> b1 = {'rect': pygame.Rect(300, 80, 50, 100), 'color': RED, 'dir':UPRIGHT}
>>> b2 = {'rect': pygame.Rect(100, 150, 60, 60), 'color': BLUE, 'dir':DOWNLEFT}
>>> boxes = [b1, b2, b3]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'b3' is not defined
>>> b3 = {'rect': pygame.Rect(200, 200, 20, 20), 'color': GREEN, 'dir': UPLEFT}
>>> boxes = [b1, b2, b3]
>>> while True:
...     for event in pygame.event.get():
...             if event.type == QUIT:
...                     pygame.quit()
...                     sys.exit()
...     windowSurface.fill(WHITE)
...     for b in boxes:
...             if b['dir'] == DOWNLEFT:
...                     b['rect'].left -= MOVESPEED
...                     b['rect'].top += MOVESPEED
...             if b['dir'] == DOWNRIGHT:
...                     b['rect'].left += MOVESPEED
...                     b['rect'].top += MOVESPEED
...             if b['dir'] == UPLEFT:
...                     b['rect'].top += MOVESPEED
...                     b['rect'].top -= MOVESPEED
...             if b['dir'] == UPRIGHT:
...                     b['rect'].left += MOVESPEED
...                     b['rect'].top -= MOVESPEED
...             
... pygame.draw.rect(windowSurface, b['color'], b['rect'])
  File "<stdin>", line 21
    pygame.draw.rect(windowSurface, b['color'], b['rect'])
    ^
SyntaxError: invalid syntax
>>> pygame.draw.rect(windowSurface, b['color'], b['rect'])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'b' is not defined
>>> pygame.display.update()
>>> time.sleep(0.02)
>>> 
